fix(checkbox/radio groups): left align checkbox and give 100% width

--- a/src/styles/specifics/employee/__employee.sass
+++ b/src/styles/specifics/employee/__employee.sass
@@ -27,12 +27,3 @@
         p
             margin-top: 0
 
-
-    .taxCardRequestModal
-        uni-field
-            flex-basis: 100%
-
-            uni-radiogroup-input input[type=radio]+label
-                display: block
-                padding-bottom: .5rem
-                margin-left: -1rem
