--- a/src/styles/specifics/salary/_vacationPay.sass
+++ b/src/styles/specifics/salary/_vacationPay.sass
@@ -11,17 +11,6 @@
         uni-field
             text-align: left
 
-        uni-radiogroup-input input[type=radio]+label
-            display: block
-            padding-bottom: 0
-
-            &:hover,
-            &:focus
-                @extend a:hover
-
-            &:active
-                @extend a:active
-
         uni-table
             @extend uni-table.scrollable
 
