--- a/src/styles/specifics/timetracking/transfer-wizard/__transfer-wizard.sass
+++ b/src/styles/specifics/timetracking/transfer-wizard/__transfer-wizard.sass
@@ -6,7 +6,7 @@ workitem-transfer-wizard
 
     .container
         padding: 1em 1em 0 1em
-    
+
     .wizard-step-container
         height: 16em
         overflow-y: auto
@@ -15,10 +15,6 @@ workitem-transfer-wizard
         padding-bottom: 0.5em
         font-weight: bold
         font-size: 12pt
-
-    label
-        padding-bottom: 0 !important
-        margin-left: 0.35rem !important
 
     .uniSelect_input
         cursor: auto
@@ -108,7 +104,7 @@ workitem-transfer-wizard
             white-space: nowrap
             overflow: hidden
             text-overflow: ellipsis
-        
+
 .merge-options
     float: right
     max-width: pxToRem(300)
