--- a/src/styles/unibase/forms/_checkboxes.sass
+++ b/src/styles/unibase/forms/_checkboxes.sass
@@ -72,7 +72,7 @@ uni-checkboxgroup-input,
                 border-right: .2rem solid transparent
                 border-bottom: .2rem solid transparent
                 position: absolute
-                top: .52rem
+                top: .55rem
                 left: calc(#{$labelLength} + .3rem)
                 height: .5rem
                 width: .2rem
@@ -209,7 +209,15 @@ uni-radiogroup-input
 
     input[type=checkbox]+label,
     input[type=radio]+label
-        padding-top: .2rem
-        padding-bottom: 1.3rem
-        padding-right: 2.5rem
+        padding: .2rem .5rem .5rem 1.75rem
         margin-left: 0
+        width: 100% !important
+
+        &:before
+            left: 0 !important
+            margin-left: 0 !important
+        &:after
+            left: .3rem !important
+
+
+
